testsuite/tests/checks/explicit_full_discrete_ranges/test.out
explicit_full_discrete_ranges.adb:6:16: error: bad discrete range, consider replacement with subtype mark
6 |       for J in Idx'First .. Idx'Last loop   --  FLAG
  |                ^^^^^^^^^^^^^^^^^^^^^ 

